# Medical-and-Wellness-Management-System--MWMS--

./: .gitignore  CMakeLists.txt  CMakePresets.json  MWMS.desktop  README.md
data/: Appointment.csv  EmployeeInfo.csv  PatientInfo.csv  Prescription.csv  UserInfo.csv  UserInfo.txt  UserRoles.csv  encryption.key
include/: App.h  Settings.h  app.h  settings.h
include/core/: Appointment.h  Employee.h  Patient.h  Prescription.h  Role.h  User.h  role.h  user.h
include/gui/: mainframe.h
include/ui/: GuiHealper.h  MainFrame.h  mainframe.h
include/ui/dialog/: ActionDialog.h  BookAppointmentDialog.h  RemoveRecordDialog.h
include/ui/lists/: ListViewCtrl.h
include/ui/panels/: Dashboard.h  DashboardPanel.h  EditRecordPanel.h  HomePanel.h  LoginPanel.h  SignupPanel.h  loginpanel.h
include/utilities/: Address.h  Constants.h  Date.h  Encryption.h  Helper.h  Phone.h  RenderText.h  Session.h  Status.h  UserManager.h  encryption.h  session.h
src/: App.cpp  Prescription.cpp  PrescriptionApproval.cpp  Settings.cpp  app.cpp  main.cpp  settings.cpp
src/core/: Appointment.cpp  Employee.cpp  Patient.cpp  Prescription.cpp  Role.cpp  User.cpp  user.cpp
src/data/: UserInfo.csv  UserRoles.csv  encryption.key
src/gui/: app.cpp  mainframe.cpp
src/ui/: MainFrame.cpp  mainframe.cpp
src/ui/dialog/: ActionDialog.cpp  BookAppointmentDialog.cpp  EditRecordPanel.cpp  RemoveRecordDialog.cpp
src/ui/lists/: ListViewCtrl.cpp
src/ui/panels/: AdminDashboard.cpp  Dashboard.cpp  DashboardPanel.cpp  DietitianDashboard.cpp  DoctorDashboard.cpp  EditRecordPanel.cpp  HomePanel.cpp  LoginPanel.cpp  NurseDashboard.cpp  PatientDashboard.cpp  PsychologistDashboard.cpp  ReceptionistDashboard.cpp  SignupPanel.cpp  homepanel.cpp  loginpanel.cpp
src/utilities/: RenderText.cpp  Session.cpp  UserManager.cpp
